tests/typing/fail/0002_operator1.ec
op o : int -> int.
op o : int -> int.